<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#453E3E"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMain_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="#009688"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="191dp"
        android:layout_height="194dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#448C84"
            android:text="@string/buttonRegistrar_txt" />

        <Button
            android:id="@+id/button_visualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#448C84"
            android:text="@string/buttonVisualizar_txt" />

        <Button
            android:id="@+id/button_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#448C84"
            android:text="@string/buttonConfig_txt"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_sair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#448C84"
            android:text="@string/buttonSair_txt" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>